--- a/packages/reactivity/package.json
+++ b/packages/reactivity/package.json
@@ -6,7 +6,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "phil",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@pvue/shared": "workspace:*"
+  }
 }
