--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -14,6 +14,7 @@
     "pvue": "workspace:*"
   },
   "dependencies": {
-    "vite": "^7.1.1"
+    "vite": "^7.1.1",
+    "pvue": "workspace:*"
   }
 }
