--- a/packages/runtime-core/package.json
+++ b/packages/runtime-core/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@pvue/reactivity": "workspace:*",
     "@pvue/shared": "workspace:*",
-    "@pvue/runtime-test": "workspace:*"
+    "@pvue/runtime-test": "workspace:*",
+    "@pvue/runtime-dom": "workspace:*"
   }
 }
