feat: update(computed 相同的计算结果应该不触发effect重新计算)

--- a/packages/reactivity/package.json
+++ b/packages/reactivity/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@pvue/shared": "workspace:*"
+    "@pvue/shared": "workspace:*",
+    "@pvue/runtime-test": "workspace:*"
   }
 }
