--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/parser": "^7.28.0",
+    "@babel/types": "^7.28.1",
+    "estree-walker": "^2.0.2",
     "jsdom": "^26.1.0",
     "rollup": "^4.46.2",
     "vitest": "^3.1.4"
